--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
     {{ content }}
 </article>
 
-<div class="wrap">
+<div class="wrap pt-4">
     <small>
         <i>This post was written by <b>{{ page.author }}</b> on <b>{{ page.date | date: "%-d %B, %Y" }}</b>, and last updated on <b>{{ page.last_modified_at | date: "%-d %B, %Y" }}</b>.
 
