--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -1,5 +1,9 @@
 $brand-primary:             #8e44ad;
 $link-color:                $brand-primary;
+$hr-border-color:           #636c72; // $gray-light
+
+$code-border-color:         #ddd;
+$code-border:               1px solid $code-border-color;
 
 $font-family-sans-serif:    sans-serif;
 $font-family-serif:         serif;
