Fix post ad insertion

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
                 p = document.createElement('p');
                 p.appendChild(s);
 
-                n = document.querySelector('.post-content > p:nth-of-type(3)');
+                n = document.querySelector('article > p:nth-of-type(3)');
 
                 if (n) {
                     n.parentNode.insertBefore(p, n.nextSibling);
