Fix blockquote styling

--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,7 @@ a {
   transition-duration: 0.3s;
 }
 
+@import "component/blockquote";
 @import "component/button";
 @import "component/code";
 @import "component/image";
