Fix collection pages

--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -15,5 +15,4 @@ layout: default
     </div>
 </article>
 
-<script async defer src="/js/compiled/Collection.js"></script>
-<script async defer src="/js/collection-bootstrap.js"></script>
+<script async src="/js/compiled/collection-bootstrap.js"></script>
