Trim CSS down even further

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,8 @@
                 s.src = '//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=wildlyinaccuratecom';
                 s.id = '_carbonads_js';
 
-                p = document.createElement('p');
+                p = document.createElement('small');
+                p.className = 'ta-c';
                 p.appendChild(s);
 
                 n = document.querySelector('article > p:nth-of-type(3)');
