--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,7 @@ a {
 @import "component/blockquote";
 @import "component/button";
 @import "component/code";
+@import "component/footer";
 @import "component/image";
 @import "component/layout";
 @import "component/list";
