--- a/_includes/content-page-header.html
+++ b/_includes/content-page-header.html
@@ -11,7 +11,7 @@
         cache: true
     {% endresponsive_image_block %}
 
-    <div class="wrap pt-5">
+    <div class="wrap mt-5 pt-4">
         <h1 class="mt-5">{{ page.title }}</h1>
         {{ post_meta }}
     </div>
