Redesign / front-end rebuild (#20)
* wowee here we go

* Looking a bit better now

* Nearly there

* Nearly ready I think

* Prepare for the progressive option on jekyll-responsive-images

* Fix stylesheet compilation

* Fix post ad insertion

* Move pygments CSS directly into highlight.css

* Remove unused print styles

* Reorder component imports

* Fix blockquote styling

* Fix collection pages

* Upgrade to Elm 0.18

* Trim CSS down even further

* Fix featured image aspect ratio at small screen sizes

* Increase space between heading and hav

* Reduce font size on smaller screens

--- a/_includes/featured-image.html
+++ b/_includes/featured-image.html
@@ -1,1 +1,1 @@
-<img class="page-header__featured-image" src="/{{ path }}" srcset="{% for i in resized %}/{{ i.path }} {{ i.width }}w, {% endfor %} /{{ original.path }} {{ original.width }}w">
+<img class="pos-a b-0 h-100 mw-n h-sm-a z--1" src="/{{ path }}" srcset="{% for i in resized %}/{{ i.path }} {{ i.width }}w, {% endfor %} /{{ original.path }} {{ original.width }}w">
