--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 ---
-
 {% include content-page-header.html %}
 
-<article class="post-content">
+<article class="wrap">
     {{ content }}
 </article>
