--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -1,15 +1,9 @@
-<p class="post-meta--header">
+<p class="pt-2 pt-lg-4">
     {{ page.date | date: "%b %-d, %Y" }}
 
-    {% if page.author %}
-        • by {{ page.author }}
-    {% endif %}
-
     {% if page.categories %}
-        • posted in
-
-        <span class="post-meta__data">
-            [{% for category in page.categories %}<a href="/category/{{ category }}/">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}]
-        </span>
+        • posted in [{% for category in page.categories %}
+            <a href="/category/{{ category }}/">{{ category }}</a>{% if forloop.last == false %}, {% endif %}
+        {% endfor %}]
     {% endif %}
 </p>
