--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,15 +1,12 @@
 ---
 layout: default
 ---
-
 {% assign hide_description = true %}
 {% capture title %}Category: {{ page.category }}{% endcapture %}
 {% include index-page-header.html %}
 
-<section class="posts-index">
-
+<section class="wrap">
     {% for post in site.categories[page.category] %}
         {% include post-summary.html %}
     {% endfor %}
-
 </section>
