--- a/_sass/component/_page-header.scss
+++ b/_sass/component/_page-header.scss
@@ -1,51 +1,11 @@
 .page-header {
-    border: none;
-    color: $color-primary-contrast;
-    margin: 0 0 $navbar-margin-bottom;
-    min-height: 260px;
-    overflow: hidden;
-    padding: 0;
-    position: relative;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.7);
-}
+  color: $white;
+  min-height: 240px;
+  overflow: hidden;
+  position: relative;
+  text-shadow: -1px 0 1px $black;
 
-.page-header__title {
-    margin-top: 100px;
-}
-
-.page-header__featured-image {
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
-    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='3');
-    height: 100%;
-    position: absolute;
-    top: 0;
-    max-width: none;
-    z-index: -1;
-}
-
-@media (min-width: $screen-md-min) {
-    .page-header {
-        min-height: 320px;
-    }
-
-    .page-header__title {
-        margin-top: 120px;
-    }
-
-    .page-header--no-meta {
-        min-height: 260px;
-    }
-}
-
-@media (min-width: $screen-sm-min) {
-    .page-header__featured-image {
-        height: auto;
-    }
-}
-
-@media (max-width: $screen-sm-min) {
-    .page-header__title {
-        margin-top: 150px;
-    }
+  a {
+    color: $white;
+  }
 }
