--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -7,9 +7,11 @@ $code-border:               1px solid $code-border-color;
 $font-family-sans-serif:    sans-serif;
 $font-family-serif:         serif;
 $font-family-base:          $font-family-serif;
-$headings-font-family:      $font-family-sans-serif;
-
 $font-size-base:            1.32rem;
+
+$headings-font-family:      $font-family-sans-serif;
+$headings-margin-bottom:    0.7rem;
+$headings-line-height:      1.2;
 
 $border-radius:             0;
 
