--- a/_sass/component/_blockquote.scss
+++ b/_sass/component/_blockquote.scss
@@ -1,4 +1,5 @@
+// [1] Allows the margin-bottom value of inner <p> tags to be honoured
 blockquote {
   border-left: 5px solid $code-border-color;
-  padding: $spacer ($spacer * 2) ($spacer / 4) ($spacer * 2);
+  padding: $spacer ($spacer * 2) 1px/*[1]*/ ($spacer * 2);
 }
