--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 
 <div class="wrap pt-4">
     <small>
-        <i>This post was written by <b>{{ page.author }}</b> on <b>{{ page.date | date: "%-d %B, %Y" }}</b>, and last updated on <b>{{ page.last_modified_at | date: "%-d %B, %Y" }}</b>.
+        <i>This post was published on <b>{{ page.date | date: "%-d %B, %Y" }}</b> and last updated on <b>{{ page.last_modified_at | date: "%-d %B, %Y" }}</b>.
 
         {% if page.categories %}
             It was posted in [{% for category in page.categories %}<a href="/category/{{ category }}/">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}]
