--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -6,7 +6,7 @@ layout: default
 <article class="wrap">
     {{ content }}
     <input id="query" class="w-100 p-2" placeholder="Search query">
-    <div id="results" class="mt-4"></div>
+    <div id="results" class="pt-4"></div>
 </article>
 
 {% raw %}
@@ -24,7 +24,7 @@ layout: default
     {{#results.length}}
         <ul class="ls-n p-0">
         {{#results}}
-            <li class="py-1">
+            <li>
                 <h4>
                     <a href="{{url}}">{{#type}}{{type}}:{{/type}} {{title}}</a>
                 </h4>
