--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@
 @import "../node_modules/bootstrap/scss/type";
 
 // WILDLY INACCURATE
-@import "global";
+// @import "global";
 
 @import "component/ads";
 @import "component/blockquote";
