--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -17,7 +17,13 @@ $border-radius:             0;
 
 $grid-breakpoints: (
   xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px
+  sm: 36rem,
+  md: 48rem,
+  lg: 52rem
+);
+
+$container-max-widths: (
+  sm: 34rem,
+  md: 46rem,
+  lg: 50rem,
 );
