--- a/_sass/utilities/_spacing.scss
+++ b/_sass/utilities/_spacing.scss
@@ -3,22 +3,19 @@
     $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
     @each $prop, $abbrev in (margin: m, padding: p) {
-      @each $size, $lengths in $spacers {
-        $length-x: map-get($lengths, x);
-        $length-y: map-get($lengths, y);
-
-        .#{$abbrev}#{$infix}-#{$size}  { #{$prop}:        $length-y $length-x !important; }
-        .#{$abbrev}t#{$infix}-#{$size} { #{$prop}-top:    $length-y !important; }
-        .#{$abbrev}r#{$infix}-#{$size} { #{$prop}-right:  $length-x !important; }
-        .#{$abbrev}b#{$infix}-#{$size} { #{$prop}-bottom: $length-y !important; }
-        .#{$abbrev}l#{$infix}-#{$size} { #{$prop}-left:   $length-x !important; }
+      @each $size, $length in $spacers {
+        .#{$abbrev}#{$infix}-#{$size}  { #{$prop}:        $length $length; }
+        .#{$abbrev}t#{$infix}-#{$size} { #{$prop}-top:    $length; }
+        .#{$abbrev}r#{$infix}-#{$size} { #{$prop}-right:  $length; }
+        .#{$abbrev}b#{$infix}-#{$size} { #{$prop}-bottom: $length; }
+        .#{$abbrev}l#{$infix}-#{$size} { #{$prop}-left:   $length; }
         .#{$abbrev}x#{$infix}-#{$size} {
-          #{$prop}-right: $length-x !important;
-          #{$prop}-left:  $length-x !important;
+          #{$prop}-right: $length;
+          #{$prop}-left:  $length;
         }
         .#{$abbrev}y#{$infix}-#{$size} {
-          #{$prop}-top:    $length-y !important;
-          #{$prop}-bottom: $length-y !important;
+          #{$prop}-top:    $length;
+          #{$prop}-bottom: $length;
         }
       }
     }
