Headings need more spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@
 @import "component/image";
 @import "component/layout";
 @import "component/list";
+@import "component/type";
 @import "component/page-header";
 
 @import "utilities";
