--- a/css/collection.scss
+++ b/css/collection.scss
@@ -1,6 +1,7 @@
 ---
 ---
 @import "bootstrap-overrides";
+@import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
 
