--- a/css/toc.scss
+++ b/css/toc.scss
@@ -1,6 +1,7 @@
 ---
 ---
 @import "bootstrap-overrides";
+@import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 
 #markdown-toc {
