--- a/_includes/thumbnail.html
+++ b/_includes/thumbnail.html
@@ -1,7 +1,7 @@
-<div class="my-4 ta-c {% if bleed %}thumbnail--bleed{% endif %}">
-    {% if url %}<a class="thumbnail__link" href="{{ url }}">{% endif %}
+<div class="my-4 ta-c">
+    {% if url %}<a href="{{ url }}">{% endif %}
     <img alt="{{ alt }}" src="/{{ path }}" {% if original.width < 880 %}width="{{ original.width }}"{% endif %}
-         srcset="{% for i in resized %}/{{ i.path }} {{ i.width }}w, {% endfor %} /{{ original.path }} {{ original.width }}w">
+         srcset="{% for i in resized %}{% if i.width < 900 %}/{{ i.path }} {{ i.width }}w{% if forloop.last != true %}, {% endif %}{% endif %}{% endfor %}">
     {% if url %}</a>{% endif %}
 
     {% if alt %}
