--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -1,4 +1,4 @@
-$brand-primary:             #8e44ad;
+$brand-primary:             #752b94;
 $link-color:                $brand-primary;
 
 $code-border-color:         #ddd;
