--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,13 @@
         {{ content }}
         {% include footer.html %}
 
-        <script defer>
+        <script>
             if ('serviceWorker' in navigator) {
                 navigator.serviceWorker.register('/service-worker.js');
             }
         </script>
 
-        <script defer>
+        <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -22,7 +22,7 @@
             ga('send', 'pageview');
         </script>
 
-        <script defer>
+        <script>
             (function() {
                 var s, p, n, a;
 
