Add LUX snippet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
             }
         </script>
 
+        <script src="https://cdn.speedcurve.com/js/lux.js?id=73376842" async defer></script>
+
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
