--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+page_label: category
 ---
 {% assign hide_description = true %}
 {% capture title %}Category: {{ page.category }}{% endcapture %}
