--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+page_label: tag
 ---
 {% assign hide_description = true %}
 {% capture title %}Tag: {{ page.tag }}{% endcapture %}
