--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@
 
                 s = document.createElement('script');
                 s.async = 1;
-                s.src = '//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=wildlyinaccuratecom';
+                s.defer = 1;
+                s.src = 'https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=wildlyinaccuratecom';
                 s.id = '_carbonads_js';
 
                 p = document.createElement('small');
