Remove responsive image captions from excerpts

--- a/_includes/thumbnail.html
+++ b/_includes/thumbnail.html
@@ -5,7 +5,7 @@
     {% if url %}</a>{% endif %}
 
     {% if alt %}
-    <div class="c-gl">
+    <div class="c-gl caption">
         <small><i>{{ alt }}</i></small>
     </div>
     {% endif %}
