--- a/_includes/content-page-header.html
+++ b/_includes/content-page-header.html
@@ -10,7 +10,7 @@
         template: _includes/featured-image.html
     {% endresponsive_image_block %}
 
-    <div class="wrap mt-5 pt-2">
+    <div class="wrap mw-w mt-5 pt-2">
         <h1 class="mt-5">{{ page.title }}</h1>
         {{ post_meta }}
     </div>
