--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="wrap mt-5 pt-4">
+<footer class="wrap mw-w mt-5 pt-4">
     <ul class="ls-n f-r">
         {% if site.github_username %}
         <li>
