--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <nav class="pos-a w-100 z-1">
-    <div class="wrap">
+    <div class="wrap mw-w">
         <a class="btn p-2 p-sm-3" href="{{ site.url }}" class="navbar__title navbar__link">Wildly Inaccurate</a>
 
         <div class="f-r">
