--- a/css/toc.scss
+++ b/css/toc.scss
@@ -5,8 +5,8 @@
 @import "../node_modules/bootstrap/scss/variables";
 
 #markdown-toc {
-  background: $code-bg;
-  border: $code-border;
+  background: $gray-100;
+  border: 1px solid $gray-600;
   display: table;
   font-size: 1rem;
   padding: $spacer $spacer $spacer ($spacer * 3);
@@ -18,6 +18,7 @@
   &:before {
     content: 'Contents';
     display: block;
+    font-weight: bold;
     margin-bottom: $spacer / 2;
     margin-left: -($spacer * 2);
   }
