Outset post images

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ page_label: article
 
 {% include content-page-header.html %}
 
-<article class="wrap">
+<article class="post-content">
     {{ content }}
 </article>
 
