--- a/_includes/thumbnail.html
+++ b/_includes/thumbnail.html
@@ -1,4 +1,4 @@
-<div class="my-4 ta-c">
+<div class="my-4 ta-c outset">
     {% if url %}<a href="{{ url }}">{% endif %}
     <img alt="{{ alt }}" src="/{{ path }}" {% if original.width < 880 %}width="{{ original.width }}"{% endif %}
          srcset="{% for i in resized %}{% if i.width < 900 %}/{{ i.path }} {{ i.width }}w{% if forloop.last != true %}, {% endif %}{% endif %}{% endfor %}">
