--- a/_sass/component/_layout.scss
+++ b/_sass/component/_layout.scss
@@ -1,4 +1,12 @@
-.wrap {
+.wrap,
+.post-content > * {
   @include make-container();
   @include make-container-max-widths();
+}
+
+.outset {
+  $breakpoints-as-list: map-values($grid-breakpoints);
+  $last-breakpoint-width: nth($breakpoints-as-list, length($breakpoints-as-list));
+
+  max-width: $last-breakpoint-width * 1.25;
 }
