--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -5,6 +5,7 @@ $font-family-sans-serif:    sans-serif;
 $font-family-serif:         serif;
 $font-family-base:          $font-family-serif;
 $font-size-base:            1.2rem;
+$h3-font-size:              $font-size-base * 1.65; // Bootstrap default is $font-size-base * 1.75 which is slightly too big
 $headings-font-family:      $font-family-sans-serif;
 
 $border-radius:             0;
