--- a/_includes/thumbnail.html
+++ b/_includes/thumbnail.html
@@ -1,7 +1,16 @@
+{% capture srcset %}
+    {%- for i in resized -%}
+        {% if i.width <= 1250 %}/{{ i.path }} {{ i.width }}w|{% endif %}
+    {%- endfor -%}
+{% endcapture %}
+
 <div class="my-4 ta-c outset">
     {% if url %}<a href="{{ url }}">{% endif %}
-    <img alt="{{ alt }}" src="/{{ path }}" {% if original.width < 880 %}width="{{ original.width }}"{% endif %}
-         srcset="{% for i in resized %}{% if i.width < 900 %}/{{ i.path }} {{ i.width }}w{% if forloop.last != true %}, {% endif %}{% endif %}{% endfor %}">
+        <img
+            alt="{{ alt }}"
+            src="/{{ path }}"
+            {% if original.width <= 738 %}width="{{ original.width }}"{% endif %}
+            srcset="{{ srcset | split: '|' | join: ', ' }}{% if original.width <= 1250 %}, /{{ path }} {{ original.width }}w{% endif %}">
     {% if url %}</a>{% endif %}
 
     {% if alt %}
