--- a/_sass/component/_layout.scss
+++ b/_sass/component/_layout.scss
@@ -4,9 +4,14 @@
   @include make-container-max-widths();
 }
 
+.post-content > ul,
+.post-content > ol, {
+	padding-left: $grid-gutter-width * 1.5;
+}
+
 .outset {
   $breakpoints-as-list: map-values($grid-breakpoints);
   $last-breakpoint-width: nth($breakpoints-as-list, length($breakpoints-as-list));
 
-  max-width: $last-breakpoint-width * 1.25;
+  max-width: 1280px;
 }
