--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -1,5 +1,6 @@
 <p class="pt-2 pt-lg-4">
     {{ page.date | date: "%b %-d, %Y" }}
+    • {{ page.content | split: " " | size | divided_by: 180 }} minute read
 
     {% if page.categories %}
         • posted in [{% for category in page.categories %}
