Upgrade to Elm 0.19; Fix collection page styling

--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -1,5 +1,5 @@
-$brand-primary:             #7700a8;
-$link-color:                $brand-primary;
+$primary:                   #7700a8;
+$link-color:                $primary;
 
 $font-family-sans-serif:    sans-serif;
 $font-family-serif:         serif;
