--- a/_sass/component/_button.scss
+++ b/_sass/component/_button.scss
@@ -1,19 +1,19 @@
 .btn {
-  background: $brand-primary;
+  background: $primary;
   color: $white;
   display: inline-block;
   font-family: $font-family-sans-serif;
 
     &:hover,
     &:focus {
-      background: rgba($brand-primary, 0.8);
+      background: rgba($primary, 0.8);
       color: $white;
     }
 }
 
 .btn--inverse {
   background: rgba($white, 0.67);
-  color: $brand-primary;
+  color: $primary;
 
     &:hover,
     &:focus {
