Some CSS optimisations

--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -22,12 +22,12 @@ layout: default
     {{/results.length}}
 
     {{#results.length}}
-        <ul class="ls-n p-0">
+        <ul class="p-2">
         {{#results}}
             <li>
-                <h4>
+                <h5>
                     <a href="{{url}}">{{#type}}{{type}}:{{/type}} {{title}}</a>
-                </h4>
+                </h5>
             </li>
         {{/results}}
         </ul>
