Switch to the full LUX snippet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,21 +12,13 @@
             }
 
             {% if page.page_label %}
-            window.LUX = {
-                label: '{{page.page_label}}'
-            }
+            LUX.label = '{{page.page_label}}'
             {% elsif layout.page_label %}
-            window.LUX = {
-                label: '{{layout.page_label}}'
-            }
+            LUX.label = '{{layout.page_label}}'
             {% elsif page.layout %}
-            window.LUX = {
-                label: '{{page.layout}}'
-            }
+            LUX.label = '{{page.layout}}'
             {% endif %}
         </script>
-
-        <script src="https://cdn.speedcurve.com/js/lux.js?id=73376842" async defer></script>
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
