Add elementtiming attribute to nav elements

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <nav class="pos-a w-100 z-1">
     <div class="wrap mw-w">
-        <a class="btn p-2 p-sm-3" href="{{ site.url }}" class="navbar__title navbar__link">Wildly Inaccurate</a>
+        <a class="btn p-2 p-sm-3" href="{{ site.url }}" elementtiming="nav-title">Wildly Inaccurate</a>
 
-        <div class="f-r">
+        <div class="f-r" elementtiming="nav-links">
         {% for page in site.pages %}
             {% if page.title and page.navigation == 'main' %}
                 <a class="btn btn--inverse p-2 p-sm-3" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
