--- a/_includes/post-summary.html
+++ b/_includes/post-summary.html
@@ -5,7 +5,7 @@
 
     <small class="c-gl pt-2">
         {{ post.date | date: "%b %-d, %Y" }}
-        • {{ post.content | split: " " | size | divided_by: 180 }} minute read
+        • {{ post.content | split: " " | size | divided_by: 180 | at_least: 1 }} minute read
     </small>
 
     <p>{{ post.excerpt | sanitize }} <a href="{{ post.url | prepend: site.baseurl }}">(Read more)</a></p>
