--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,8 @@
             {% endif %}
         </script>
 
+        <script src="https://cdn.usefathom.com/script.js" site="TZQVTUWX" defer></script>
+
         <script>
             (function() {
                 var s, c, p, a
