--- a/_includes/post-summary.html
+++ b/_includes/post-summary.html
@@ -4,7 +4,7 @@
     </h3>
 
     <small class="c-gl pt-2">
-        {{ post.date | date: "%b %-d, %Y" }}
+        {{ post.date | date: "%-d %b %Y" }}
         • {{ post.content | split: " " | size | divided_by: 180 | at_least: 1 }} minute read
     </small>
 
