--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ page_label: article
 
     <small>
         <blockquote>
-            <p>This post was published on <b>{{ page.date | date: "%-d %B, %Y" }}</b> and last updated on <b>{{ page.last_modified_at | date: "%-d %B, %Y" }}</b>.
+            <p>This post was published on <b>{{ page.date | date: "%-d %B %Y" }}</b> and last updated on <b>{{ page.last_modified_at | date: "%-d %B %Y" }}</b>.
 
                 {% if page.categories %}
                     It was posted in [{% for category in page.categories %}<a href="/category/{{ category }}/">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}]
